test/examples/good/local_nested.ml
let val x : int in
let x = 5 in
let val y : int in
let y = x + 1 in
y * 2
