test/examples/bad/val_without_let.ml
(* val without matching let *)
val x : int
val y : string
let x = 42
